# mokusei-ai

./: .env  .gitignore  AGENTS.md  CHANGELOG.md  README.md  logger.py  main.py  pyproject.toml  railway.json  requirements.txt
api/: main.py
docs/: ganymede-api.md
mokusei_ai/: __init__.py  __main__.py  cli.py  main.py  start.sh
mokusei_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mokusei_ai/agents/: __init__.py  registry.py
mokusei_ai/agents/europa/: __init__.py  agent.py
mokusei_ai/agents/ganymede/: __init__.py  agent.py
mokusei_ai/agents/ganymede/prompts/: ganymede_instructions.xml  persona.xml
mokusei_ai/api/: router.py
mokusei_ai/core/: base_agent.py  logger.py
