[project]
name = "mokusei-ai"
version = "0.1.0"
description = "Mokusei AI — A multi-agent framework powered by Jupiter's moons"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "langchain-openai",
    "python-dotenv",
    "typer[all]",
    "rich",
]

[project.scripts]
mokusei-ai = "mokusei_ai.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mokusei_ai*"]   # ✅ auto-discovers all subpackages